--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,9 @@ a:hover {
 #logo img {
     float: left;
     height: 35px;
+    width: 100px;
     position: relative;
-    top: 10px;
+    top: 50pxpx;
     left: 10px;
 }
 
