--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,10 @@ a {
     font-family: sans-serif;
 }
 
-a:hover {
+#header #menu:hover {
     background: rgb(0, 0, 0, 0.05);
+    
+    
 }
 
 #logo img {
@@ -18,16 +20,16 @@ a:hover {
     height: 35px;
     width: 100px;
     position: relative;
-    top: 50pxpx;
     left: 10px;
 }
+
 
 #header {
     width: 100%;
     position: fixed; 
     z-index: 90;
     box-sizing: border-box;
-    height: 70px;
+    height: 100px;
     padding: 1rem ;
     display: flex;
     align-items: center;
@@ -97,4 +99,42 @@ a:hover {
     background-color: white;
     padding: 4px 14px;
     font-size: 15px;
+}
+
+/* css destaque */
+
+.destaque h2 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+
+}
+
+.destaque p {
+    width: 77%;
+    text-align: center;
+    font-size: 14px;
+    margin: 30px auto;
+
+}
+
+.destaque figcaption {
+    font-size: 13px;
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+
+}
+
+.destaque a {
+    justify-content: center;
+    display: flex;
+    text-decoration: none;
+    color: #30dcf4;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 30px 0;
+
+
+
 }
