projeto ecommerce rev.06

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a {
     height: 500px;
     padding: 50px;
     margin: 30px auto;
-    background-color: #005caa;
+    background-color: #ffffff;
 }
 
 .section-banner-home img {
@@ -84,19 +84,19 @@ a {
     width: 60%;
     font-weight: 500;
     padding-bottom: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .section-banner-home .texto-banner p {
     font-size: 15px;
     margin-bottom: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .section-banner-home .texto-banner a {
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
-    background-color: white;
+    background-color: rgb(10, 10, 10);
     padding: 4px 14px;
     font-size: 15px;
 }
@@ -138,3 +138,61 @@ a {
 
 
 }
+
+/* fim destaque */
+
+.novidades {
+    background-color: aqua;
+    padding: 50px;
+}
+
+.novidades .text-body {
+    width: 80%;
+    margin: 70px auto;
+}
+
+.novidades h2 {
+    color: white;
+
+}
+
+.novidades p {
+    color: #ffffff;
+}
+
+.novidades a {
+    color: #000;
+    text-decoration: underline;
+    text-decoration-color: violet;
+    padding: 6px 12px;
+    background-color: #ffffff;
+    font-weight: 400;
+}
+
+/* fim novidades */
+/* inicio css galera */
+
+.galeria {
+    margin: 60px auto 20px;
+}
+
+.galeria h2 {
+    text-align: center;
+    font-size: 24px;
+}
+
+.galeria p {
+    text-align: center;
+    width: 50%;
+    margin: 14px auto 50px;
+}
+
+.galeria .gallery {
+    width: 30%;
+    margin: 14px auto 50px;
+}
+
+
+/* fim css galeria */
+
+
