--- a/css/styles.css
+++ b/css/styles.css
@@ -195,4 +195,38 @@ a {
 
 /* fim css galeria */
 
+/*inicio css footer */
+.rodape {
+    padding: 50px 50px 0;
+}
+ 
+.rodape .info-contato p {
+    margin: 0px;
+}
+
+.rodape a {
+    text-decoration: none;
+    color: #000;
+    font-size: 13px;
+}
+
+.rodape a:hover {
+    font-weight: bold;
+
+
+}
+
+.rodape .redes-sociais {
+    display: inline-block;
+} 
+
+.rodape .redes-sociais img {
+    width: 45px;
+    height: 40px;
+}
+
+.rodape p.direitos {
+    text-align: center;
+    margin-top: 40px;
+}
 
