--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,26 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
         transform: rotate(-135deg);
         top: -7px;
     }
+
+    .embed-container {
+        position: relative;
+        padding-bottom: 56,25%;
+        height: 100%;
+        max-width: 100%;
+        height: auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        padding-top: 100px;
+    }
+    
+    .embed-container iframe, .embed-container object, .embed-container embed {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
 }
 
 
@@ -307,3 +327,22 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     margin-top: 40px;
 }
 
+/*css pagina media.html */
+.embed-container {
+    position: relative;
+    padding-bottom: 56,25%;
+    height: 100%;
+    max-width: 100%;
+    height: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 150px;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
