--- a/css/styles.css
+++ b/css/styles.css
@@ -339,6 +339,9 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     margin-top: 30px;
     margin-bottom: 30px;
     padding-top: 0;
+    padding-right: 30px;
+    padding-left: 30px;
+    
 }
 
 .embed-container iframe, .embed-container object, .embed-container embed {
@@ -347,4 +350,8 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     left: 0;
     width: 100%;
     height: 100%;
+    border: solid thick red;
+    border-radius: 1rem;
+    box-shadow: gray 0.5em 0.5em 0.3em;
+
 }
