--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,79 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     .embed-container iframe {
         margin-top: 10px;
     }
+
+    form_main {
+        width: 100%;
+    }
+    
+    .form_main h4 {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 20px;
+        font-weight: 300;
+        margin-bottom: 15px;
+        margin-top: 20px;
+        text-transform: uppercase;
+    }
+    
+    .heading {
+        border-bottom: 1px solid #fcab0e;
+        padding-bottom: 9px;
+        position: relative;
+    }
+    
+    
+    .heading span {
+        background: #936600 none repeat scroll 0 0;
+        bottom: -2px;
+        height: 3px;
+        left: 0;
+        position: absolute;
+        width: 75px;
+    }
+    
+    .form {
+        border-radius: 7px;
+        padding: 6px;
+    }
+    
+    .txt[type="text"] {
+        border: 1px solid #ccc;
+        margin: 10px;
+        padding: 10px 0 10px 5px;
+        width: 100%;
+    
+    
+    }
+    
+    .txt_3 [type="text"] {
+        margin: 10px 0 0;
+        padding: 10px 0 10 5px;
+        width: 100%;
+    }
+    
+    .txt2[type="submit"] {
+        background: #242424 none repeat scroll 0 0;
+        border: 1px solid #4f5c04;
+        border-radius: 25px;
+        color: #fff;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 35px;
+        margin: 10px 0;
+        padding: 0;
+        text-transform: uppercase;
+        width: 30%;
+    
+    }
+    .txt2:hover {
+        background: rgba(0, 0,0, 0) none repeat scroll 0 0;
+        color: #5793ef;
+        transition: all 0.5s ease 0s;
+    
+    }
+    
+    
+    
 }
 
 
@@ -362,3 +435,76 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
 .embed-container .col-sm{
     margin-top: 10px;
 }
+
+.form_main {
+    width: 100%;
+}
+
+.form_main h4 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 15px;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.heading {
+    border-bottom: 1px solid #fcab0e;
+    padding-bottom: 9px;
+    position: relative;
+}
+
+
+.heading span {
+    background: #936600 none repeat scroll 0 0;
+    bottom: -2px;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    width: 75px;
+}
+
+.form {
+    border-radius: 7px;
+    padding: 6px;
+}
+
+.txt[type="text"] {
+    border: 1px solid #ccc;
+    margin: 10px;
+    padding: 10px 0 10px 5px;
+    width: 100%;
+
+
+}
+
+.txt_3 [type="text"] {
+    margin: 10px 0 0;
+    padding: 10px 0 10 5px;
+    width: 100%;
+}
+
+.txt2[type="submit"] {
+    background: #242424 none repeat scroll 0 0;
+    border: 1px solid #4f5c04;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 35px;
+    margin: 10px 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 30%;
+
+}
+.txt2:hover {
+    background: rgba(0, 0,0, 0) none repeat scroll 0 0;
+    color: #5793ef;
+    transition: all 0.5s ease 0s;
+
+}
+
+
+
