--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,13 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
         width: 100%;
     }
     
-    .txt2[type="submit"] {
-        background: #242424 none repeat scroll 0 0;
-        border: 1px solid #4f5c04;
+    .form-button[type="submit"] {
+        -moz-box-shadow: inset 0px 1px 0px 0px #87c0ec;
+        -webkit-box-shadow:inset 0px 1px 0px 0px #87c0ec;
+        box-shadow: inset 0px 1px 0px 0px #87c0ec;
+        background-color: #297ee6 none repeat scroll 0 0;
+        display: inline-block;
+        border: 1px solid #2489d6;
         border-radius: 25px;
         color: #fff;
         font-size: 16px;
@@ -223,11 +227,23 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
         width: 30%;
     
     }
-    .txt2:hover {
-        background: rgba(0, 0,0, 0) none repeat scroll 0 0;
-        color: #5793ef;
-        transition: all 0.5s ease 0s;
+    .form-button:hover {
+        background-color: #31a1de;
     
+    }
+    
+    .form-button:active {
+        position: relative;
+        top: 1px;
+    
+    
+    }
+
+    .map {
+        min-width: 300px;
+        min-height: 300px;
+        width: 100%;
+        height: 100%;
     }
     
     
@@ -485,9 +501,13 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     width: 100%;
 }
 
-.txt2[type="submit"] {
-    background: #242424 none repeat scroll 0 0;
-    border: 1px solid #4f5c04;
+.form-button[type="submit"] {
+    -moz-box-shadow: inset 0px 1px 0px 0px #87c0ec;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #87c0ec;
+    box-shadow: inset 0px 1px 0px 0px #87c0ec;
+    background-color: #297ee6 ;
+    display: inline-block;
+    border: 1px solid #2489d6;
     border-radius: 25px;
     color: #fff;
     font-size: 16px;
@@ -499,11 +519,21 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
     width: 30%;
 
 }
-.txt2:hover {
-    background: rgba(0, 0,0, 0) none repeat scroll 0 0;
-    color: #5793ef;
-    transition: all 0.5s ease 0s;
+.form-button:hover {
+    background-color: #31a1de;
 
+}
+
+.formbutton:active {
+    position: relative;
+    top: 1px;
+}
+
+.map {
+    min-width: 300px;
+    min-height: 300px;
+    width: 100%;
+    height: 100%;
 }
 
 
