--- a/css/styles.css
+++ b/css/styles.css
@@ -530,8 +530,13 @@ border-bottom: 2px solid rgba(0,0,0, 0.5);
 }
 
 .map {
-    min-width: 300px;
-    min-height: 300px;
+    /*min-width: 300px;
+    min-height: 180px;*/
+    width: auto;
+    height: auto;
+}
+
+.map iframe {
     width: 100%;
     height: 100%;
 }
